--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,11 @@
             <version>3.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-rest-hal-explorer</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
